# poetry-release-please-example

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/: hello.py
