[tool.poetry]
name = "poetry-release-please-example"
version = "0.1.0"
description = ""
authors = ["Amir Szekely <kichik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
