[tool.poetry]
name = "poetry-release-please-example"
version = "0.1.2"
description = ""
authors = ["Amir Szekely <kichik@gmail.com>"]

packages = [
    { include = "src" }
]

[tool.poetry.scripts]
demo = "src.hello:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
